      Flavor objects from entries in the database now caches the
      created object.  This is approximately a 4.5 times speed
      up. (2.10 seconds versus 9.4 seconds)
    * The code in iterUpdateContainerInfo has had similar version
      and flavor caching optimizations that make the code about 
      2.5 times faster (from 10 seconds to 4 seconds).

  o Bug Fixes:
    * "conary rq" (with no arguments) no longer hides troves if the
      flavor that matches the system flavor is not built for the
      latest version. (CNY-784)
    * "cvc cook" now displays the correct label of the thing its
      building, even when it is not the build label.
    * Calling "cvc update" on a new package will fail with an
      appropriate error message instead of displaying a
      traceback. (CNY-715)
    * A bug that caused a traceback when marking a trove that
      contained a file with no contents (such as a symlink) as removed
      has been fixed.
    * A bug that caused a traceback in the web interface when a
      non-admin user attempts to manage their entitlement classes has
      been fixed. (CNY-798)

Changes in 1.1.2:
  o Bug Fixes:
    * Conary now removes sources from the lookaside before unpacking SRPMs to
      ensure that the source referenced from the SRPM is actually contained in
      the SRPM. (CNY-771)
    * Errors found in the recipe while checking in will now display file name
      and line number information along with the error found.
    * The trove browser no longer shows duplicate entries for multihomed
      repositories.
    * A bug that kept sqlite-based 64-bit mirrors from being used as a source 
      for further mirrors has been fixed.

  o Build Changes:
    * Conary no longer prints policy error messages three times; it
      now prints each error immediately when it is found, and then
      summarizes all policy errors once (instead of twice) at the
      end of the build process. (CNY-776)

Changes in 1.1.1:
  o Client Changes: